* Changelog

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.6...dev][Unreleased]]

*** Added
+ *tetragono*: Add support to calculate deviation of the observer set as a whole, which is useful since many observables
  are the summation of several local observables.
*** Changed
*** Deprecated
*** Removed
*** Fixed

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.5...v0.3.6][v0.3.6]] - 2023-05-26

*** Added
+ *TAT.hpp*: Add =clear_fermi_symmetry= for tensor with fermionic symmetry, which convert the tensor to the simplest
  fermionic tensor, tensor with parity symmetry.
+ *TAT.py*: Add python binding for =clear_fermi_symmetry=.
+ *tetragono*: Check whether the state is =None= when dump the state to file to avoid overwriting file by mistake.
+ *tetragono*: Add =gm_clear_symmetry= for sampling lattice.
+ *tetragono*: Add =gm_run_g= and =ap_run_g= for middle level API. These are generators, which yield the energy of the
  state before gradient descent after every gradient step.
+ *TAT.hpp*: =Cut= is used directly for the dimension cut in svd. =Cut= will detect the type of the input to determine
  whether it is relative cut or remain cut, if nothing provided, the behavior of previous =NoCut= will be used. And user
  could also set remain cut and relative cut together.
*** Changed
+ *tetragono*: =new_dimension= in simple update will be intepreted as the threshold of singular value when it is float.
+ *TAT.hpp, TAT.py*: =clear_symmetry= will return NoSymmetry tensor or ParityTensor based on whether the original tensor
  is fermionic. The previous behavior would give NoSymmetry tensor only, which is dangerous for fermionic tensor, is
  renamed to =clear_bose_symmetry=.
*** Deprecated
+ *TAT.hpp*: =NoCut=, =RemainCut=, =RelativeCut= is deprecated, please use =Cut= directly.
*** Fixed
+ *tetragono*: Fix a bug in merging physical edges during simple update. When the hamiltonian on single site with a
  large dimension is operated, the dead loop would occur previously.
