@@ -5,6 +5,7 @@
 *** Added
 + *tetragono*: Add support to calculate deviation of the observer set as a whole, which is useful since many observables
   are the summation of several local observables.
++ *tetragono*: Add arguments support for =gm_conf_create= and =ap_conf_create= in tetragono shell.
 *** Changed
 *** Deprecated
 *** Removed
